add module python

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ pages:
   image: python:latest
   script:
     - pip install mkdocs-material
-    - python setup.py sdist bdist_wheel
+    - python setup.py install
     - mkdocs build --site-dir public
   artifacts:
     paths:
