--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ pages:
   image: python:latest
   script:
     - pip install mkdocs-material
+    - pip install -r requirements.txt
     - python setup.py install
     - mkdocs build --site-dir public
   artifacts:
