--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-mkdocs>=1.3.1
-mkdocs-material>=8.4.3
+mkdocs>=1.5.3
+mkdocs-material>=9.5.12
 mike>=1.1.2
 beautifulsoup4>=4.8.2
 lxml>=4.5.0
+mkdocs-git-revision-date-localized-plugin>=1.2.4
