change site URL

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@
 
 # Project information
 site_name: Yozorazaka46
-site_url: https://tkrdhk.gitlab.io/yozorazaka46
+site_url: https://yozorazaka46.net
 site_author: Dhika Mahendra Sudrajat
 site_description: >-
   I simply documented every technique, stage, configuration, and my experience.
