change site homepage URL

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -143,7 +143,7 @@ extra:
       link: mailto:dhikamahendra789@gmail.com
   
   # Homepage logo link
-  homepage: https://tkrdhk.gitlab.io/yozorazaka46
+  homepage: https://yozorazaka46.net
   
   # Site source
   generator: false
